fixed bottom overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -12,10 +12,11 @@ body {
     padding: 50px;
     background-image: url("/img/clearNight.jpg");
     background-size: cover;
+    bakg
 }
 
 .bottom {
-    padding-top: 200px;
+     /* padding-top: 200px; */
 }
 
 #changeTemp {
